# Algorytmy

./: .gitignore  Algorytmy.cpp  Algorytmy.h  Array.h  Array.hpp  CMakeLists.txt  Dev.h  Dev.hpp  Main.cpp  Suma.cpp  Suma.h
Algorithms/: ArraysTestModels.h  Dev.cpp  Dev.h  GPU.cpp  GPU.h  Main.cpp  TestModels.h
Algorithms/Arrays/: AlgorytmsList.hpp  Array.h  Array.hpp
Algorithms/Arrays/Sort/: bubble.hpp  insertion.hpp  merge.hpp  quickSort.hpp  selection.hpp  selectionSort.hpp
Algorithms/Arrays/Sort/CPU/: bubble.hpp  insertion.hpp  merge.hpp  quick.hpp  selection.hpp
Algorithms/Arrays/Sort/GPU/: selection.hpp
Algorithms/Arrays/Sum/: hybrid.hpp  line.hpp  thread.hpp
Algorithms/Base/: fibonachi.cpp  nwd.cpp  pow.cpp  silnia.cpp
Algorithms/Base/CPU/: Base.h  armstrongNumbers.cpp  factorial.cpp  fibonachi.cpp  nwd.cpp  pow.cpp
Algorytmy/: Algorytmy.cpp  Algorytmy.h  Array.h  Array.hpp  ArraysTestModels.h  Dev.cpp  Dev.h  Dev.hpp  Main.cpp  Main.h  Matrix.cpp  Matrix.h
Algorytmy/Arrays/: AlgorytmsList.hpp  Array.h  Array.hpp
Algorytmy/Arrays/Sort/: insertion.hpp  mergeSort.hpp
Algorytmy/Arrays/Sum/: line.hpp
Algorytmy/Base/: Base.h  armstrongNumbers.cpp  fibonachi.cpp  silnia.cpp
